fixed portfolio text alignment,also centered contact number text

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,9 @@ nav #icon {
   cursor: pointer;
   display: none;
 }
+.contact-details ul li i {
+  margin-left: 75px;
+}
 
 @media (max-width: 1048px) {
   label.logo {
@@ -299,7 +302,12 @@ nav ul li {
 }
 
 @media (width: 280px) {
-  
+  .contact-details ul li {
+    font-size: 0.7rem;
+}
+.contact-details ul li i {
+  margin-left: 55px;
+}
   nav {
     height: 80px;
     width: 100%;
@@ -373,6 +381,12 @@ nav ul li {
 }
 }
 @media (width: 320px) {
+  .contact-details ul li {
+    font-size: 0.7rem;
+}
+.contact-details ul li i {
+  margin-left: 50px;
+}
   nav ul.show{
     left: 0;
     background-color: #787a7a;
@@ -465,6 +479,7 @@ nav ul li {
   }
 }
 @media (width: 1024px) {
+  
   #greetings ul li{
     margin-top: 70px;
     margin-left: 100px;
@@ -564,6 +579,7 @@ nav ul li {
   .intro h4 {
    font-size: 1.2rem;
   }
+ 
 }
 #container {
   display: grid;
@@ -598,9 +614,6 @@ nav ul li {
   z-index: -1;
   opacity: 0.8;
 }
-
-
-
 #about {
   box-sizing: border-box;
   padding: 20px;
@@ -657,6 +670,7 @@ nav ul li {
 }
 .skill-box ul li{
   list-style:circle;
+  
 }
 .row {
   display: flex;
@@ -687,9 +701,8 @@ nav ul li {
   color: black;
 }
 #portfolio p {
-  letter-spacing: normal;
-  text-align: left;
-  word-spacing: normal;
+  text-align:center;
+  width: 90%;
 }
 #contact {
   grid-area: contact;
@@ -712,6 +725,7 @@ nav ul li {
   box-sizing: border-box;
   align-items: center;
 }
+
 .input {
   padding: 12px;
   margin: 15px;
